[package]
name = "builder-api-types"
version = "0.3.1"
rust-version = "1.80"
edition = "2021"
publish = false

[dependencies]
alloy = { version = "0.3.6", features = [
    "rpc-types-beacon",
    "serde",
    "ssz",
    "getrandom",
] }
blst = "0.3.11"
ethereum_serde_utils = "0.7.0"
eyre = "0.6.12"
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.33"
ssz_types = "0.8"
thiserror = "1.0.61"
tree_hash = "0.8"
tree_hash_derive = "0.8"

[dev-dependencies]
toml = "0.8.13"
